# TTRANS

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-packages.yml
assets/: ttrans.rc
include/: ttrans.hpp
packaging/windows/: README-Windows.txt  firewall.ps1  install.ps1  start_gui.cmd  uninstall.ps1
scripts/: build_linux.sh  build_windows.ps1  docker_build.ps1  docker_gui.ps1  docker_receive.ps1  docker_send.ps1  package_linux.sh  package_macos.sh  package_windows.ps1  package_windows_msys.sh
src/: gui_main.cpp  imgui_gui.cpp  main.cpp  protocol.cpp  socket.cpp  transfer.cpp  web_gui.cpp
